--- a/src/controlflowgraph/edges/Makefile.am
+++ b/src/controlflowgraph/edges/Makefile.am
@@ -1,6 +1,6 @@
 # Third-level Makefile.am for CoFlo, ./controlflowgraph/edges directory.
 #
-# Copyright 2011 Gary R. Van Sickle (grvs@users.sourceforge.net).
+# Copyright 2011, 2012 Gary R. Van Sickle (grvs@users.sourceforge.net).
 #
 # This file is part of CoFlo.
 #
@@ -33,6 +33,6 @@ libedges_a_SOURCES = \
 # We need to do this because per the Automake manual, "In compilations with per-target flags,
 # the ordinary ‘AM_’ form of the flags variable is not automatically included in the compilation
 # (however, the user form of the variable is included)."
-libedges_a_CPPFLAGS = $(AM_CPPFLAGS)
+libedges_a_CPPFLAGS = -I $(abs_top_srcdir)/src/debug_utils $(AM_CPPFLAGS)
 libedges_a_CFLAGS = $(AM_CFLAGS)
 libedges_a_CXXFLAGS = $(AM_CXXFLAGS)
