--- a/src/controlflowgraph/statements/Makefile.am
+++ b/src/controlflowgraph/statements/Makefile.am
@@ -1,6 +1,6 @@
 # Third-level Makefile.am for CoFlo
 #
-# Copyright 2011 Gary R. Van Sickle (grvs@users.sourceforge.net).
+# Copyright 2011, 2012 Gary R. Van Sickle (grvs@users.sourceforge.net).
 #
 # This file is part of CoFlo.
 #
@@ -36,6 +36,6 @@ libstatements_a_SOURCES = statements.h \
     StatementBase.cpp StatementBase.h \
     Switch.cpp Switch.h
 
-libstatements_a_CPPFLAGS = $(AM_CPPFLAGS)
+libstatements_a_CPPFLAGS = -I $(abs_top_srcdir)/src/debug_utils $(AM_CPPFLAGS)
 libstatements_a_CFLAGS = $(AM_CFLAGS)
 libstatements_a_CXXFLAGS = $(AM_CXXFLAGS)
