branch_13: Fixed tests/testsuite.at's main.cpp check.  Fixed broken dependencies which were resulting in the coflo executable not being rebuilt.  Passing Autoconf/Automake-determined CPPFLAGS to DParser build now.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -44,7 +44,6 @@ coflo_SOURCES = main.cpp \
 	safe_enum.h \
 	\
 	gcc_gimple_parser.g gcc_gimple_parser.h
-coflo_DEPENDENCIES = $(top_builddir)/libtool $(top_builddir)/third_party/stamp_boost_src_installed $(top_builddir)/third_party/stamp_dparser_installed
 	
 # Path to the make_dparser executable.
 PROG_ABSPATH_MAKE_DPARSER = $(abs_top_builddir)/third_party/make_dparser
@@ -60,9 +59,9 @@ ALLBOOSTLIBS = $(BOOST_LOCAL_LIB)/libboost_graph.a \
 	$(BOOST_LOCAL_LIB)/libboost_system.a \
 	$(BOOST_LOCAL_LIB)/libboost_filesystem.a
 else
-# Autoconf Macro Archive vars.
+# Boost libs determined by Autoconf Macro Archive macros.
 ALLBOOSTLIBS = $(BOOST_PROGRAM_OPTIONS_LIB) $(BOOST_REGEX_LIB) $(BOOST_SYSTEM_LIB) $(BOOST_FILESYSTEM_LIB)
-# boost.m4 vars.
+# Boost libs determined by boost.m4.
 #ALLBOOSTLIBS = $(BOOST_PROGRAM_OPTIONS_LIBS) $(BOOST_REGEX_LIBS) $(BOOST_SYSTEM_LIBS) $(BOOST_FILESYSTEM_LIBS)
 endif
 
