--- a/Makefile.am
+++ b/Makefile.am
@@ -25,6 +25,8 @@ ACLOCAL_AMFLAGS = -I m4 --install
 include $(top_srcdir)/aminclude_doxygen.am
 
 # The subdirectories containing the source code, docs, and tests.
+# Note: The code in src depends on the libraries in third_party, so make sure the latter is always listed before the former.
+# Note that we can't list these other libraries in e.g. coflo_DEPENDENCIES because that replaces all Automake-generated dependencies.
 SUBDIRS = doc third_party src tests
 
 # We want to distribute .version.
