--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -1,6 +1,6 @@
 # Second-level Makefile.am for CoFlo's ./tests directory.
 #
-# Copyright 2011 Gary R. Van Sickle (grvs@users.sourceforge.net).
+# Copyright 2011, 2012 Gary R. Van Sickle (grvs@users.sourceforge.net).
 #
 # This file is part of CoFlo.
 #
@@ -20,7 +20,15 @@
 # Test at most the first 16 GCCs that we find installed on the system.
 MAX_GCCS_TO_TEST=16
 
-EXTRA_DIST = $(TESTSUITE_AT) $(TESTSUITE) $(srcdir)/package.m4 atlocal.in $(C_TEST_SOURCE)
+EXTRA_DIST = $(TESTSUITE_AT) $(TESTSUITE) $(srcdir)/package.m4 atlocal.in $(C_TEST_SOURCE) \
+	test_src_1/main.c \
+	test_src_1/Layer1.c test_src_1/Layer1.h \
+	test_src_1/Thread1.c \
+	test_src_1/Thread1.h \
+	test_src_1/Thread2.c \
+	test_src_1/Thread2.h \
+	test_src_1/RarelySafePrint.c test_src_1/RarelySafePrint.h \
+	test_src_1/ThreadUnsafeFunctions.c test_src_1/ThreadUnsafeFunctions.h
 DISTCLEANFILES = atconfig
 MAINTAINERCLEANFILES = Makefile.in $(TESTSUITE)
 CLEANFILES = $(CPP_TEST_SOURCE)
@@ -61,6 +69,7 @@ $(srcdir)/package.m4: $(top_srcdir)/configure.ac
 
 # The .at files which make up the test suite.
 TESTSUITE_AT = \
+	connectedness.at \
 	constraints.at \
 	structuring_compound_conditions.at \
 	testsuite.at \
@@ -114,7 +123,8 @@ C_TEST_SOURCE = $(srcdir)/test_source_file_1.c $(srcdir)/test_source_file_2.c $(
 	compound_condition_1.c \
 	compound_condition_2.c \
 	compound_condition_3.c \
-	compound_condition_4.c
+	compound_condition_4.c \
+	infinite_loop_simple.c
 	
 # The built C++ test files.
 CPP_TEST_SOURCE = test_source_file_1.cpp test_source_file_2.cpp
