branch_14: Added UEI class.  Other minor cleanups.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -41,6 +41,7 @@ coflo_SOURCES = main.cpp \
 	Successor.cpp Successor.h \
 	SuccessorTypes.h \
 	TranslationUnit.cpp TranslationUnit.h \
+	UEI.cpp UEI.h \
 	safe_enum.h \
 	\
 	gcc_gimple_parser.g gcc_gimple_parser.h
