branch_15: Started adding CppUnit tests.

--- a/configure.ac
+++ b/configure.ac
@@ -281,6 +281,9 @@ AC_CHECK_FUNC(glob)
 ### Checks for optional libraries.
 ###
 
+# CppUnit
+AM_PATH_CPPUNIT(1.12.1)
+
 # Allow the user to build with dmalloc.
 AX_WITH_DMALLOC
 
@@ -293,6 +296,10 @@ AC_CONFIG_TESTDIR([tests])
 AC_CONFIG_FILES([tests/Makefile tests/atlocal])
 # Autotest needs autom4te, or 'missing's stub for it. 
 AM_MISSING_PROG([AUTOM4TE], [autom4te])
+
+# Create CppUnit Makefiles if we have it.
+AC_CONFIG_FILES([cppunit_tests/Makefile
+	cppunit_tests/controlflowgraph/Makefile])
 
 ###
 ### Create the Makefiles for the program.
