branch_15: Moved CppUnit tests into the normal source tree to avoid duplication of Makefile.am's.

--- a/Makefile.am
+++ b/Makefile.am
@@ -27,7 +27,7 @@ include $(top_srcdir)/aminclude_doxygen.am
 # The subdirectories containing the source code, docs, and tests.
 # Note: The code in src depends on the libraries in third_party, so make sure the latter is always listed before the former.
 # Note that we can't list these other libraries in e.g. coflo_DEPENDENCIES because that replaces all Automake-generated dependencies.
-SUBDIRS = doc third_party src cppunit_tests tests 
+SUBDIRS = doc third_party src tests 
 
 # We want to distribute .version.
 #EXTRA_DIST = $(top_srcdir)/.version
