--- a/src/controlflowgraph/edges/Makefile.am
+++ b/src/controlflowgraph/edges/Makefile.am
@@ -31,8 +31,8 @@ libedges_a_SOURCES = \
 
 # Propagate any AM_*FLAGS to the per-target flags.
 # We need to do this because per the Automake manual, "In compilations with per-target flags,
-# the ordinary ‘AM_’ form of the flags variable is not automatically included in the compilation
+# the ordinary ï¿½AM_ï¿½ form of the flags variable is not automatically included in the compilation
 # (however, the user form of the variable is included)."
-libedges_a_CPPFLAGS = -I $(abs_top_srcdir)/src/debug_utils $(AM_CPPFLAGS)
+libedges_a_CPPFLAGS = -I $(top_srcdir)/src/debug_utils $(AM_CPPFLAGS)
 libedges_a_CFLAGS = $(AM_CFLAGS)
 libedges_a_CXXFLAGS = $(AM_CXXFLAGS)
